# -NARRATIVE-SHIELD

./: README.md  index.html
backend/: README.md  db_matcher.py  gemini_layer.py  main.py  ollama_layer.py  pipeline.py  pyproject.toml  requirements.txt  statistical_engine.py
backend/llm_malign_detector/: analyser.py  app.py  database.py  malign_detection.db  models.py  narrative_shield.db  parser_engine.py  schemas.py  seed_patterns.py
src/: App.tsx  analysisEngine.ts  index.css
